[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
scraper = "0.12.0"
select = "0.5.0"
warp = "0.3"
serde = { version = "1", features = ["derive"]}
serde_json = "1.0.78"
anyhow = "1.0.53"
urlencoding = "2.1.0"


